# GTS-core-cpp

./: CMakeLists.txt  README.md  config.json  version.h
Arduino/v1/: v1.ino
Arduino/v2/: v2.ino
OK_versions/v0.0/: описание.txt
OK_versions/v0.2/: описание.txt
OK_versions/v0.2/html/js/: acquisitionSection_julia.html
OK_versions/v0.3/: changes.txt
OK_versions/v0.4/: changes.txt
OK_versions/v1/: описание.txt
OK_versions/v1.0/: changes.txt
html/: index.html
html/js/: acquisitionSection.html  configSection.html
include/: Stoppable.h
include/Diag/: Config.h  Diag.h  Storage.h
include/FastADC/: CAEN743.h  CAENDigitizer.h  CAENDigitizerType.h  Chatter.h  Config.h  Crate.h  FastConfig.h  FastSystem.h  Link.h  Processor.h  Storage.h  Storage_old.h
include/SHT/: compress.hpp
include/Server/: connection.hpp  header.hpp  mime_types.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp
include/SlowADC/: SlowSubsystem.h  compress.hpp
lib/: CAENDigitizer.lib
raspberryPi/: listener.cpp  readme
src/: main.cpp  tester.cpp
src/Diag/: Config.cpp  Diag.cpp  Storage.cpp
src/FastADC/: CAEN743.cpp  Chatter.cpp  Config.cpp  Crate.cpp  FastConfig.cpp  FastSystem.cpp  Link.cpp  MessageQueue.cpp  Processor.cpp  Storage.cpp
src/SHT/: compress.cpp
src/Server/: connection.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
src/SlowADC/: SlowSubsystem.cpp  compress.cpp  manualRun.py  slow2sht.cpp
utils/: GenTrigger.py  msgpk_debug.py  sendUDP.py
